--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     line-height: 20px;
     letter-spacing: 3.6px;
 }
-.horizontal-line {
+.horizontal-line{
     border: none;
     height: 3px; 
     background-color: #3A4F9A; 
@@ -41,6 +41,7 @@
     justify-content: space-evenly;
 }
 .card{
+    box-sizing: border-box;
     border-radius: 8px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -58,26 +59,27 @@
     font-size: 20px;
     font-family: 'Inter', sans-serif;
     font-weight: bold;
-    line-height: 20px;
+    line-height: 22px;
     letter-spacing: 2px;
-    margin-left: 40px;
+    margin-left: 35px;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 .card p{
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
     font-family: 'Inter', sans-serif;
-    display: flex;
-    width: 359px;
-    height: 109px;
-    flex-direction: column;
-    flex-shrink: 0;
+    overflow: hidden;
     color: #575757;
     font-size: 13px;
     font-weight: 300;
     line-height: 20px;
     letter-spacing: 1.3px;
-    margin-left: 40px;
+    width: 359px;
+    margin-left: 35px;
 }
-.card a {
+.card a{
     text-decoration: none;
 }
 .expand{
@@ -89,6 +91,7 @@
     letter-spacing: 1.3px;
     background: none;
     border: none;
+    margin: 20px;
     margin-left: 330px;
 }
 ::-webkit-scrollbar {
@@ -100,17 +103,66 @@
     flex-shrink: 0;
 }
   
-  /* Altera o fundo da barra de rolagem */
 ::-webkit-scrollbar-track {
     background-color: #f1f1f1;
 }
   
-  /* Altera a cor da alça (thumb) da barra de rolagem */
 ::-webkit-scrollbar-thumb {
     background-color: #3A4F9A4D;
 }
   
-  /* Altera a cor da alça (thumb) da barra de rolagem quando está em hover */
 ::-webkit-scrollbar-thumb:hover {
     background-color: #555;
+}
+.goBack{
+    margin-top: 95px;
+    margin-left: 25px;
+    width: 75px;
+    height: 75px;
+    flex-shrink: 0; 
+    border-radius: 75px;
+    border: 0.3px solid rgba(255, 255, 255, 0.60);
+    background: var(--primary, #32325D);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    position: absolute;
+}
+.post_info{
+    display: flex;
+}
+.post_info div{
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin: auto;
+    margin-top: 105px;
+    width: 711px;
+    height: 519px;
+    flex-shrink: 0;
+    overflow: hidden;
+}
+.post_info img{
+    width: 100%;
+    height: 311.4px;
+    object-fit: cover;
+}
+.post_info h1{
+    color: #3A4F9A;
+    font-size: 20px;
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+    line-height: 20px;
+    letter-spacing: 2px;
+    margin-left: 40px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.post_info p{
+    font-family: 'Inter', sans-serif;
+    color: #575757;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 20px;
+    letter-spacing: 1.3px;
+    margin-left: 40px;
 }
