--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -17,12 +16,12 @@
 }
 .logo h1{
     color: #fff;
-    font-family: 'Inter', sans-serif;
+    font-family: Inter;
 }
 .title{
     margin: 125px;
     color: #3A4F9A;
-    font-family: 'Inter', sans-serif;
+    font-family: Inter;
     font-size: 36px;
     font-weight: 600;
     line-height: 20px;
@@ -58,7 +57,7 @@
 .card h1{
     color: #3A4F9A;
     font-size: 20px;
-    font-family: 'Inter', sans-serif;
+    font-family: Inter;
     font-weight: bold;
     line-height: 22px;
     letter-spacing: 2px;
@@ -68,9 +67,9 @@
 }
 .card p{
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
-    font-family: 'Inter', sans-serif;
+    font-family: Inter;
     overflow: hidden;
     color: #575757;
     font-size: 13px;
@@ -86,7 +85,7 @@
 .expand{
     color: var(--title, #3A4F9A);
     font-size: 13px;
-    font-family: 'Inter', sans-serif;
+    font-family: Inter;
     font-weight: 700;
     line-height: 20px;
     letter-spacing: 1.3px;
@@ -148,7 +147,7 @@
 .post_info h1{
     color: #3A4F9A;
     font-size: 20px;
-    font-family: 'Inter', sans-serif;
+    font-family: Inter;
     font-weight: bold;
     line-height: 20px;
     letter-spacing: 2px;
@@ -157,7 +156,7 @@
     margin-top: 10px;
 }
 .post_info p{
-    font-family: 'Inter', sans-serif;
+    font-family: Inter;
     color: #575757;
     font-size: 13px;
     font-weight: 300;
@@ -167,46 +166,44 @@
 }
 .comments{
     width: 762px;
-    height: 321px;
-    flex-shrink: 0;
+    min-height: 321px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     margin: auto;
     margin-top: 63px;
     margin-bottom: 50px;
     border-radius: 8px;
-}
-.separatorLine{
-    width: 652.007px;
-    height: 0px;
-    flex-shrink: 0;
-    color: #575757;
-    margin: auto;
-    margin-top: 15px;
-}
+    padding: 40px 0px;
+}   
 .userComment {
     color: #575757;
     font-size: 16px;
-    font-family: 'Inter', sans-serif;
+    font-family: Inter;
     font-style: normal;
     font-weight: 200;
     line-height: 20px;
     letter-spacing: 1.3px;
-    display: flex;
     width: 652px;
-    flex-direction: column;
     margin: auto;
 }
+
 .userComment span{
     color: #3A4F9A;
     font-size: 16px;
-    font-family: 'Inter', sans-serif;
+    font-family: Inter;
     font-style: normal;
     font-weight: 600;
     line-height: 20px;
     letter-spacing: 1.6px;
-    display: flex;
-    width: 652px;
-    flex-direction: column;
+    width: auto;
     margin: auto;
+    margin-right: 5px; 
+}
+.separatorLine{
+    width: 652.007px;
+    height: 0px;
+    color: #575757;
+    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
